--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -207,7 +207,6 @@
                 android:layout_width="30dp"
                 android:layout_height="33dp"
                 android:layout_gravity="center"
-                android:layout_weight="1"
                 app:srcCompat="@drawable/ic_go_to" />
 
         </LinearLayout>
@@ -237,7 +236,7 @@
                 android:fontFamily="@font/montserrat"
                 android:gravity="center_vertical"
                 android:paddingStart="10dp"
-                android:text="@string/doctor"
+                android:text="@string/MyDoc"
                 android:textColor="#515C6F"
                 android:textSize="15sp" />
 
@@ -261,7 +260,6 @@
                 android:layout_width="30dp"
                 android:layout_height="33dp"
                 android:layout_gravity="center"
-                android:layout_weight="1"
                 app:srcCompat="@drawable/ic_go_to" />
 
         </LinearLayout>
@@ -276,38 +274,37 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/language_icon"
+                android:id="@+id/calendar_icon"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="15dp"
-                app:srcCompat="@drawable/ic_language_icon" />
+                app:srcCompat="@drawable/google_calendar" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/calendar"
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:fontFamily="@font/montserrat"
                 android:gravity="center_vertical"
                 android:paddingStart="10dp"
-                android:text="@string/language"
+                android:text="@string/google_calendar"
                 android:textColor="#515C6F"
                 android:textSize="15sp" />
 
             <TextView
-                android:id="@+id/English"
+                android:id="@+id/connection_status"
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:clickable="true"
                 android:fontFamily="@font/montserrat"
                 android:gravity="center_vertical"
-                android:paddingEnd="10dp"
-                android:text="@string/english"
+                android:text="@string/disabled"
                 android:textAlignment="textEnd"
                 android:textColor="#66515C6F"
+                android:paddingEnd="10dp"
                 android:textSize="15sp"
                 tools:ignore="RtlCompat" />
 
@@ -316,25 +313,10 @@
                 android:layout_width="30dp"
                 android:layout_height="33dp"
                 android:layout_gravity="center"
-                android:layout_weight="1"
                 app:srcCompat="@drawable/ic_go_to" />
 
-            <TextView
-                android:id="@+id/Arabic"
-                android:layout_width="wrap_content"
-                android:layout_height="45dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="10dp"
-                android:layout_weight="1"
-                android:clickable="true"
-                android:fontFamily="monospace"
-                android:paddingTop="10dp"
-                android:text="@string/arabic"
-                android:textAlignment="textEnd"
-                android:textColor="#66515C6F"
-                android:textSize="15sp" />
-
         </LinearLayout>
+
 
 
         <Button
