--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,9 +25,8 @@
         <item name="android:popupBackground">@color/white</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:gravity">center</item>
     </style>
-
-
+    
 
 </resources>
