--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -5,13 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/lightGrey"
     android:orientation="vertical"
     tools:context=".controller.main.profile.Editprofile"
     android:id="@+id/Editprofile">
-
-
-
 
 
 
@@ -56,13 +53,11 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/head"
@@ -71,16 +66,13 @@
 
     <Button
         android:id="@+id/buttonImage"
-        android:layout_width="150dp"
+        android:layout_width="35dp"
         android:layout_height="35dp"
-
-        android:background="@drawable/custom_edit_text"
+        android:background="@drawable/ic_plus"
         android:ellipsize="none"
-        android:text="@string/ChooseImage"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/ImageSavedStorage"
@@ -88,25 +80,27 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Is Image Saved in Storage?"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonImage" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/linearLayout5"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:background="@drawable/layout_rounded_bg"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/new_white_card"
         android:elevation="15dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
 
 
         <TextView
@@ -242,10 +236,10 @@
             android:layout_width="320dp"
             android:layout_height="54dp"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/white_background"
             android:clickable="true"
             android:focusable="auto"
-            android:layout_marginBottom="10dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toTopOf="@+id/delete"
             app:layout_constraintEnd_toEndOf="parent"
@@ -280,10 +274,8 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:fontFamily="@font/montserrat"
-                android:gravity="center_vertical"
-                android:paddingEnd="10dp"
+                android:gravity="center"
                 android:text="@string/english"
-                android:textAlignment="textEnd"
                 android:textColor="#66515C6F"
                 android:textSize="15sp"
                 tools:ignore="RtlCompat" />
@@ -305,9 +297,8 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:fontFamily="monospace"
-                android:paddingTop="10dp"
+                android:gravity="center"
                 android:text="@string/arabic"
-                android:textAlignment="textEnd"
                 android:textColor="#66515C6F"
                 android:textSize="15sp" />
 
