[FEAT] : Upload events when generating the report

--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
@@ -14,10 +15,12 @@
         android:layout_height="545dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="147dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/white_frame" />
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/white_frame"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <View
         android:id="@+id/serene_logo"
@@ -26,8 +29,11 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
-        android:layout_marginTop="152dp"
-        android:background="@drawable/serene_logo" />
+        android:layout_marginTop="30dp"
+        android:background="@drawable/serene_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/white_frame" />
 
     <TextView
         android:id="@+id/description4"
@@ -35,12 +41,15 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/serene_logo"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/montserrat"
         android:text="@string/welcome_to_serene"
         android:textAlignment="center"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/white_frame"
+        app:layout_constraintStart_toStartOf="@+id/white_frame"
+        app:layout_constraintTop_toBottomOf="@+id/serene_logo" />
 
     <Button
         android:id="@+id/login"
@@ -48,10 +57,13 @@
         android:layout_height="35dp"
         android:layout_below="@+id/description4"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/main_button"
         android:text="@string/login"
-        android:textColor="#FFFFFF" />
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="@+id/white_frame"
+        app:layout_constraintStart_toStartOf="@+id/white_frame"
+        app:layout_constraintTop_toBottomOf="@+id/description4" />
 
     <Button
         android:id="@+id/register"
@@ -62,30 +74,10 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/main_button"
         android:text="@string/register"
-        android:textColor="@color/white" />
-
-    <TextView
-        android:id="@+id/description3"
-        android:layout_width="321dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/register"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:fontFamily="@font/montserrat"
-        android:text="@string/or"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <ImageView
-        android:id="@+id/signup_withgoogle"
-        android:layout_width="213dp"
-        android:layout_height="45dp"
-        android:layout_below="@+id/description3"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:clickable="true"
-        app:srcCompat="@drawable/signup_withgoogle" />
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/white_frame"
+        app:layout_constraintStart_toStartOf="@+id/white_frame"
+        app:layout_constraintTop_toBottomOf="@+id/login" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
